--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,21 +1,24 @@
-{% load static %}
+/*-- GENERAL BODY/HTML --*/
 
-<!DOCTYPE html>
-<html class="h-100">
+body {
+    background-color: #F9FAFC;
+}
 
-<head>
-    <title>We Love Dogs Blog</title>
+.light-bg {
+    background-color: #fff;
+}
 
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous">
-    </script>
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+.dark-bg {
+    background-color: #141414;
+}
 
-</head>
+.main-bg {
+    background-color: #F9FAFC;
+}
+
+
+/*-- FOOTER --*/
+
+img.footer-logo {
+    width: 90px;
+}
