--- a/static/css/style.css
+++ b/static/css/style.css
@@ -22,3 +22,18 @@ body {
 img.footer-logo {
     width: 90px;
 }
+
+.social-networks {
+    text-align: center;
+}
+
+.social-networks>li {
+    display: inline;
+}
+
+.social-networks i {
+    font-size: 150%;
+    margin: 1% 2%;
+    padding: 0 1%;
+    color: #DADAD2;
+}
