--- a/templates/base.html
+++ b/templates/base.html
@@ -66,12 +66,17 @@
     </main>
 
     <!-- Footer -->
+    <!-- Font awesome icons as the clickable links to social media sites. Links open in a new tab -->
     <footer class="footer mt-auto py-3 dark-bg">
         <p class="m-0 text-center text-white">Copyright | <img class="footer-logo" src="https://res.cloudinary.com/dcydt01ed/image/upload/v1691714704/baltas_buscjw.png"></p>
-        <p class="m-0 text-center text-white">Follow us: <i class="fab fa-facebook-square ms-3"></i>
-            <i class="fab fa-twitter-square ms-3"></i>
-            <i class="fab fa-instagram-square ms-3"></i>
-            <i class="fab fa-youtube-square ms-3"></i></p>
+        <p class="m-0 text-center text-white .social-networks">Follow us: 
+            <a href="https://facebook.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Facebook page (opens in a new tab)"><i class="fab fa-facebook-square ms-3"></i></a>
+            <a href="https://instagram.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Instagram page (opens in a new tab)"><i class="fab fa-instagram-square ms-3"></i></a>
+            <a href="https://www.youtube.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our youtube page (opens in a new tab)"><i class="fab fa-youtube-square ms-3"></i></a>
+        </p>
     </footer>
 </body>
 
