--- a/templates/base.html
+++ b/templates/base.html
@@ -68,7 +68,7 @@
     <!-- Font awesome icons as the clickable links to social media sites. Links open in a new tab -->
     <footer class="footer mt-auto py-3 dark-bg">
         <p class="m-0 text-center text-white">Copyright | <img class="footer-logo" src="https://res.cloudinary.com/dcydt01ed/image/upload/v1691714704/baltas_buscjw.png"></p>
-        <p class="m-0 text-center text-white .social-networks">Follow us: 
+        <p class="m-0 text-center text-white social-networks">Follow us: 
             <a href="https://facebook.com" target="_blank" rel="noopener"
                     aria-label="Visit our Facebook page (opens in a new tab)"><i class="fab fa-facebook-square ms-3"></i></a>
             <a href="https://instagram.com" target="_blank" rel="noopener"
