--- a/templates/index.html
+++ b/templates/index.html
@@ -41,39 +41,39 @@
               <button type="button" data-bs-target="#about-carousel" data-bs-slide-to="1" aria-label="Carousel Photo 2"></button>
               <button type="button" data-bs-target="#about-carousel" data-bs-slide-to="2" aria-label="Carousel Photo 3"></button>
             </div>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="https://res.cloudinary.com/dcydt01ed/image/upload/v1691624591/_21x_krqyrakh5_Cool-3D-Wallpaper-HD-Dogs-52-images-_r8bimw.jpg" alt="NissanGTR">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="https://res.cloudinary.com/dcydt01ed/image/upload/v1691624591/_21x_krqyrakh5_Cool-3D-Wallpaper-HD-Dogs-52-images-_r8bimw.jpg" alt="GermanShepherd">
+                </div>
+                <div class="carousel-item">
+                  <img src="https://res.cloudinary.com/dcydt01ed/image/upload/v1691624588/_21x_krqyrakh5_Best-52-Dogs-Wallpaper-on-HipWallpaper-Beautiful-Dogs-_e3quc0.jpg" alt="Husky">
+                </div>
+                <div class="carousel-item">
+                  <img src="https://res.cloudinary.com/dcydt01ed/image/upload/v1691624579/_21x_krqyrakh5_Happy-Dog-HD-wallpaper-1920x1080-13364_mmmup5.jpg" alt="SmallDog">
+                </div>
               </div>
-              <div class="carousel-item">
-                <img src="https://res.cloudinary.com/dcydt01ed/image/upload/v1691624588/_21x_krqyrakh5_Best-52-Dogs-Wallpaper-on-HipWallpaper-Beautiful-Dogs-_e3quc0.jpg" alt="LamborghiniCustom">
-              </div>
-              <div class="carousel-item">
-                <img src="https://res.cloudinary.com/dcydt01ed/image/upload/v1691624579/_21x_krqyrakh5_Happy-Dog-HD-wallpaper-1920x1080-13364_mmmup5.jpg" alt="RedFerrari">
-              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#about-carousel" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#about-carousel" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#about-carousel" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#about-carousel" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
           </div>
-        </div>
-        <div class="col-lg-6">
-          <div class="p-3">
-            <h2 class="display-6">About Us</h2>
-            <p>Hello, fellow puppy lovers!
-                If you’re the proud parent of adorable pooch and love sharing about your dog’s delightful moments, we are the perfect community for you!
-                We are members of a pack of people who love dogs, know about dogs, and love sharing the dog life with each other. Life with dogs is rich, and the richness of life grows richer when it’s shared.
-                </p>
+          <div class="col-lg-6">
+            <div class="p-3">
+              <h2 class="display-6">About Us</h2>
+              <p>Hello, fellow puppy lovers!
+                  If you are the proud parent of adorable pooch and love sharing about your dog’s delightful moments, we are the perfect community for you!
+                  We are members of a pack of people who love dogs, know about dogs, and love sharing the dog life with each other. Life with dogs is rich, and the richness of life grows richer when it is shared.
+                  </p>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-  </section>
+    </section>
   <!-- About Us Section -->
   
   <!-- Page Divider -->
@@ -88,16 +88,16 @@
       <div class="row">
         <div class="col-md-4 py-3">
           <div class="card card-home h-100">
-            <img class="card-img-index card-image" src="https://res.cloudinary.com/dcydt01ed/image/upload/v1691622850/156-1565958_beautiful-dog-hd-wallpaper-download_f1xt0o.jpg" alt="Like Heart">
+            <img class="card-img-index card-image" src="static/images/cute_dog.jpg" alt="Share">
             <div class="card-body">
               <h3 class="card-title fw-bold">Share</h3>
-                <p class="card-text text">Share original photo and a story of YOUR dog and brighten someone’s day with his/her adorable antics!</p>
+                <p class="card-text">Share original photo and a story of YOUR dog and brighten someone’s day with his/her adorable antics!</p>
             </div>
           </div>
         </div>
         <div class="col-md-4 py-3">
           <div class="card card-home h-100">
-            <img class="card-img-index card-image" src="https://res.cloudinary.com/dcydt01ed/image/upload/v1691625187/CVETS-Puppy-Care_n64toq.jpg" alt="Community">
+            <img class="card-img-index card-image" src="static/images/small_dog.jpg" alt="Learn">
             <div class="card-body">
               <h3 class="card-title fw-bold">Learn</h3>
               <p class="card-text">Get regular tips and tricks about dog care, obedience training, canine enrichment and recipes for dogs.</p>
@@ -106,7 +106,7 @@
         </div>
         <div class="col-md-4 py-3">
           <div class="card card-home h-100">
-            <img class="card-img-index card-image" src="https://res.cloudinary.com/dcydt01ed/image/upload/v1691625134/00-hero-Dog_PPL_t9uux6.jpg" alt="Custom-Mitsubishi-Evo">
+            <img class="card-img-index card-image" src="static/images/people_and_dogs.jpg" alt="Interact">
             <div class="card-body">
               <h3 class="card-title fw-bold">Interact</h3>
               <p class="card-text">Connect and engage with other dog owners in a positive and respectful environment.</p>
