--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous">
+    </script>
      <!-- CSS STATIC FILE -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
@@ -24,17 +27,17 @@
     <!-- Navigation -->
 
     <nav class="navbar navbar-expand-lg light-bg navbar-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="{% url 'home' %}"><img class="logo" src="https://res.cloudinary.com/dcydt01ed/image/upload/c_scale,h_300,w_900/v1691608017/Logo_m7ynhg.png"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
-                aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-    
-            <div class="collapse navbar-collapse nav justify-content-end nav-tabs" id="navbarText">
-          <ul class="navbar-nav mr-5">
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'home' %}">Home</a>
+      <div class="container-fluid">
+          <a class="navbar-brand" href="{% url 'home' %}"><img class="logo" src="https://res.cloudinary.com/dcydt01ed/image/upload/c_scale,h_300,w_900/v1691608017/Logo_m7ynhg.png"></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+              aria-controls="#navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+          </button>
+  
+          <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-5">
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'home' %}">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Blog</a>
