--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@
     <div class="container px-4">
       <div class="row align-items-center justify-content-between">
         <div class="col-lg-6 mb-4 mb-lg-0 gx-5">
-          <div id="about-carousel" class="carousel slide" data-bs-ride="carousel">
+          <div id="about-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#about-carousel" data-bs-slide-to="0" class="active"
                 aria-current="true" aria-label="Carousel Photo 1"></button>
