--- a/templates/index.html
+++ b/templates/index.html
@@ -43,13 +43,13 @@
             </div>
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="https://res.cloudinary.com/dcydt01ed/image/upload/v1691624591/_21x_krqyrakh5_Cool-3D-Wallpaper-HD-Dogs-52-images-_r8bimw.jpg" alt="GermanShepherd">
+                  <img src="https://res.cloudinary.com/dcydt01ed/image/upload/v1691971802/344352_qcyfzo.jpg" alt="GermanShepherd">
                 </div>
                 <div class="carousel-item">
-                  <img src="https://res.cloudinary.com/dcydt01ed/image/upload/v1691624588/_21x_krqyrakh5_Best-52-Dogs-Wallpaper-on-HipWallpaper-Beautiful-Dogs-_e3quc0.jpg" alt="Husky">
+                  <img src="https://res.cloudinary.com/dcydt01ed/image/upload/v1691972094/1309697_rckiye.jpg" alt="DogInThenow">
                 </div>
                 <div class="carousel-item">
-                  <img src="https://res.cloudinary.com/dcydt01ed/image/upload/v1691624579/_21x_krqyrakh5_Happy-Dog-HD-wallpaper-1920x1080-13364_mmmup5.jpg" alt="SmallDog">
+                  <img src="https://res.cloudinary.com/dcydt01ed/image/upload/v1691972045/1290181_ebkeda.jpg" alt="ChristmasDog">
                 </div>
               </div>
               <button class="carousel-control-prev" type="button" data-bs-target="#about-carousel" data-bs-slide="prev">
