--- a/static/css/style.css
+++ b/static/css/style.css
@@ -58,6 +58,36 @@ img.logo {
 }
 
 
+/*-- BLOG.HTML --*/
+.card {
+    border: none;
+    background-color: transparent;
+}
+
+.image-container {
+    position: relative;
+}
+
+.image-flash {
+    position: absolute;
+    bottom: 5%;
+    min-width: 30%;
+    left: -2px;
+    background-color:#dbddd8;
+}
+
+.author {
+    color: #141414;
+    margin: 4px;
+    text-transform: uppercase;
+}
+
+.post-link {
+    text-decoration: none;
+    color: #141414;
+}
+
+
 /*-- FOOTER --*/
 img.footer-logo {
     width: 90px;
