--- a/templates/base.html
+++ b/templates/base.html
@@ -40,7 +40,7 @@
             <a class="nav-link" href="{% url 'home' %}">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Blog</a>
+              <a class="nav-link" href="{% url 'blog' %}">Blog</a>
             </li>
             {% if user.is_authenticated %}
             <li class="nav-item">
