--- a/templates/blog.html
+++ b/templates/blog.html
@@ -10,7 +10,7 @@
             <div class="row">
                 {% for post in post_list %}
                 <div class="col-md-4">
-                    <div class="card mb-4">
+                    <div class="card text-right mb-4">
                         <div class="card-body">
                             <div class="image-container">
                                 {% if "placeholder" in post.featured_image.url %}
@@ -28,9 +28,10 @@
                                 <p class="card-text">{{ post.excerpt }}</p>
                             </a>
                             <hr />
-                            <p class="card-text text-muted h6">{{ post.created_on}} <i class="far fa-heart"></i>
-                                {{ post.number_of_likes }} <i class="far fa-comments"></i>
-                                {{ post.number_of_comments }}</p>
+                            <p class="card-text text-muted h6">{{ post.created_on}} 
+                                <i class="far fa-solid fa-heart" style="color: #ff0a0a;"></i>{{ post.number_of_likes }}
+                                <i class="far fa-solid fa-comments"></i>{{ post.number_of_comments }}
+                            </p>
                             <a href="#" class="btn btn-primary">Read More</a>
                         </div>
                     </div>
@@ -44,4 +45,18 @@
             </div>
         </div>
     </div>
-    {%endblock%}
+    {% if is_paginated %}
+    <nav aria-label="Page navigation">
+        <ul class="pagination justify-content-center">
+            {% if page_obj.has_previous %}
+            <li><a href="?page={{ page_obj.previous_page_number }}" class="page-link">&laquo; PREV </a></li>
+            {% endif %}
+            {% if page_obj.has_next %}
+            <li><a href="?page={{ page_obj.next_page_number }}" class="page-link"> NEXT &raquo;</a></li>
+
+            {% endif %}
+        </ul>
+    </nav>
+    {% endif %}
+</div>
+{%endblock%}
