Update the images links

--- a/templates/index.html
+++ b/templates/index.html
@@ -88,7 +88,7 @@
       <div class="row">
         <div class="col-md-4 py-3">
           <div class="card card-home h-100">
-            <img class="card-img-index card-image" src="static/images/cute_dog.jpg" alt="Share">
+            <img class="card-img-index card-image" src="https://res.cloudinary.com/dcydt01ed/image/upload/v1691979940/static/images/cute_dog.1da54a02f481.jpg" alt="Share">
             <div class="card-body">
               <h3 class="card-title fw-bold">Share</h3>
                 <p class="card-text">Share original photo and a story of YOUR dog and brighten someone’s day with his/her adorable antics!</p>
@@ -97,7 +97,7 @@
         </div>
         <div class="col-md-4 py-3">
           <div class="card card-home h-100">
-            <img class="card-img-index card-image" src="static/images/small_dog.jpg" alt="Learn">
+            <img class="card-img-index card-image" src="https://res.cloudinary.com/dcydt01ed/image/upload/v1691979939/static/images/small_dog.5c92e7d47104.jpg alt="Learn">
             <div class="card-body">
               <h3 class="card-title fw-bold">Learn</h3>
               <p class="card-text">Get regular tips and tricks about dog care, obedience training, canine enrichment and recipes for dogs.</p>
@@ -106,7 +106,7 @@
         </div>
         <div class="col-md-4 py-3">
           <div class="card card-home h-100">
-            <img class="card-img-index card-image" src="static/images/people_and_dogs.jpg" alt="Interact">
+            <img class="card-img-index card-image" src="https://res.cloudinary.com/dcydt01ed/image/upload/v1691979941/static/images/people_and_dogs.743cab5e0a84.jpg" alt="Interact">
             <div class="card-body">
               <h3 class="card-title fw-bold">Interact</h3>
               <p class="card-text">Connect and engage with other dog owners in a positive and respectful environment.</p>
