--- a/templates/index.html
+++ b/templates/index.html
@@ -97,7 +97,7 @@
         </div>
         <div class="col-md-4 py-3">
           <div class="card card-home h-100">
-            <img class="card-img-index card-image" src="https://res.cloudinary.com/dcydt01ed/image/upload/v1691979939/static/images/small_dog.5c92e7d47104.jpg alt="Learn">
+            <img class="card-img-index card-image" src="https://res.cloudinary.com/dcydt01ed/image/upload/v1691979939/static/images/small_dog.5c92e7d47104.jpg" alt="Learn">
             <div class="card-body">
               <h3 class="card-title fw-bold">Learn</h3>
               <p class="card-text">Get regular tips and tricks about dog care, obedience training, canine enrichment and recipes for dogs.</p>
