--- a/templates/base.html
+++ b/templates/base.html
@@ -44,17 +44,17 @@
             </li>
             {% if user.is_authenticated %}
             <li class="nav-item">
-              <a class="nav-link" href="#">Logout</a>
+              <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
             </li>
             {% else %}
             <li class="nav-item">
               <a class="nav-link" href="#">Contact Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Sign Up</a>
+              <a class="nav-link" href="{% url 'account_signup' %}">Sign Up</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Login</a>
+              <a class="nav-link" href="{% url 'login' %}">Login</a>
             </li>
             {% endif %}
           </ul>
@@ -70,7 +70,7 @@
     <!-- Footer -->
     <!-- Font awesome icons as the clickable links to social media sites. Links open in a new tab -->
     <footer class="footer mt-auto py-3 dark-bg">
-        <p class="m-0 text-center text-white">Copyright | <img class="footer-logo" src="https://res.cloudinary.com/dcydt01ed/image/upload/v1691714704/baltas_buscjw.png"></p>
+        <p class="m-0 text-center text-white "><i class="far fa-copyright"> Copyright |</i><img class="footer-logo" src="https://res.cloudinary.com/dcydt01ed/image/upload/v1691714704/baltas_buscjw.png"></p>
         <p class="m-0 text-center text-white social-networks">Follow us: 
             <a href="https://facebook.com" target="_blank" rel="noopener"
                     aria-label="Visit our Facebook page (opens in a new tab)"><i class="fab fa-facebook-square ms-3"></i></a>
