--- a/templates/base.html
+++ b/templates/base.html
@@ -54,7 +54,7 @@
               <a class="nav-link" href="{% url 'account_signup' %}">Sign Up</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'login' %}">Login</a>
+              <a class="nav-link" href="{% url 'account_login' %}">Login</a>
             </li>
             {% endif %}
           </ul>
