--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -26,11 +26,11 @@
               {% endfor %}
               
               {% endfor %}
-              <input type="submit" value="Sign Up" class="btn btn-primary">
+              <input type="submit" value="Sign Up" class="btn btn-dark">
               <hr>
               <p>Already have an account? <br> Sign in here...</p>
               
-              <a class="btn btn-primary" href="{% url 'account_login' %}">Log In</a>
+              <a class="btn btn-dark" href="{% url 'account_login' %}">Log In</a>
           </form>
       </div>
     </div>
