--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
       <div class="hero-text text-center text-wrap main-text">
         <h1 class="lead display-1 fs-1">Welcome to our WeLoveDogs Blog!</h1>
         <p class="fs-4">A community build around the love for all breed of dogs.</p>
-        <a class="btn btn-light btn-lg" href="#" role="button">Join Us</a>
+        <a class="btn btn-light btn-lg" href="{% url 'account_signup' %}" role="button">Join Us</a>
       </div>
     </div>
   </section>
