--- a/templates/blog.html
+++ b/templates/blog.html
@@ -32,7 +32,7 @@
                                 <i class="far fa-solid fa-heart" style="color: #ff0a0a;"></i> {{ post.number_of_likes }}
                                 <i class="far fa-solid fa-comments"></i> {{ post.number_of_comments }}
                             </p>
-                            <a href="#" class="btn btn-primary">Read More</a>
+                            <a href="#" class="btn btn-dark">Read More</a>
                         </div>
                     </div>
                 </div>
