--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -34,11 +34,11 @@
 
                     <div class="col-1">
                         <!-- The number of likes goes before the closing strong tag -->
-                        <strong class="text-secondary"><i class="far fa-heart"></i> {{ post.number_of_likes }} </strong>
+                        <strong class="text-secondary"><i class="far fa-solid fa-heart" style="color: #ff0a0a;"></i> {{ post.number_of_likes }} </strong>
                     </div>
                     <div class="col-1">
                         {% with comments.count as total_comments %}
-                        <strong class="text-secondary"><i class="far fa-comments"></i>
+                        <strong class="far fa-solid fa-comments"></i>
                             <!-- Total_comments variable goes before the closing strong tag -->
                             {{ total_comments }}</strong>
                         {% endwith %}
