--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
         <h1 class="lead display-1 fs-1">Welcome to our WeLoveDogs Blog!</h1>
         <p class="fs-4">A community build around the love for all breed of dogs.</p>
         {% if user.is_authenticated %}
-        <a class="btn btn-light btn-lg" href="#" role="button">Your Profile</a>
+        <a class="btn btn-light btn-lg" href="{% url 'blog' %}" role="button">Blog</a>
         {% else %}
         <a class="btn btn-light btn-lg" href="{% url 'account_signup' %}" role="button">Join Us</a>
         {% endif %}
