--- a/templates/blog.html
+++ b/templates/blog.html
@@ -23,16 +23,20 @@
                                     <p class="author">Author: {{ post.author }}</p>
                                 </div>
                             </div>
+                            {% if user.is_authenticated %}
                             <a href="{% url 'post_detail' post.slug %}" class="post-link">
+                                {% endif %}
                                 <h2 class="card-title">{{ post.title }}</h2>
                                 <p class="card-text">{{ post.excerpt }}</p>
                             </a>
-                            <hr />
+                            <hr/>
                             <p class="card-text text-muted h6">{{ post.created_on}} 
                                 <i class="far fa-solid fa-heart" style="color: #ff0a0a;"></i> {{ post.number_of_likes }}
                                 <i class="far fa-solid fa-comments"></i> {{ post.number_of_comments }}
                             </p>
+                            {% if user.is_authenticated %}
                             <a href="{% url 'post_detail' post.slug %}" class="btn btn-dark">Read More</a>
+                            {% endif %}
                         </div>
                     </div>
                 </div>
