--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
   <!-- About Us Section -->
   <section class="py-3 text-center">
     <div class="container px-4">
-      <div class="row align-items-center justify-content-between">
+      <div class="row align-items-center text-center">
         <div class="col-lg-6 mb-4 mb-lg-0 gx-5">
           <div id="about-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
             <div class="carousel-indicators">
