--- a/static/css/style.css
+++ b/static/css/style.css
@@ -123,39 +123,20 @@ img.footer-logo {
 .masthead {
     margin-top: 10px;
     overflow: hidden;
-    position: relative;
-    display: inline-block;
-    height: 33vh;
-    width: 100%;
+    height: 60vh;
 }
 
 .masthead-text {
     background-color: #e6b265;
     color: black;
-    position: relative;
 }
 
 .masthead-image {
-    position: relative;
-    overflow: hidden;
-}
-
-.masthead-image:after {
-    content: "";
-    position: absolute;
-    top: 0;
-    right: 90%;
-    height: 100%;
-    width: 150%;
-    background: #e6b265;
-    -webkit-transform: skew(15deg);
-    -moz-transform: skew(15deg);
-    transform: skew(15deg);
-    z-index: 100;
+    object-fit: cover;
 }
 
 .post-title {
-    margin-top: 20%;
+    margin-top: 5%;
     margin-left: 5%;
 }
 
