--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -4,28 +4,28 @@
 
 <div class="masthead">
     <div class="container">
-        <div class="row g-0">
-            <div class="col-md-6 masthead-text">
-                <!-- Post title goes in these h1 tags -->
+        <div class="row g-0 masthead-text">
+            <div class="col card">
                 <h1 class="post-title">{{ post.title }}</h1>
-                <!-- Post author goes before the | the post's created date goes after -->
                 <p class="post-subtitle">{{ post.author }} | {{ post.created_on }} | {{ post.number_of_comments }} comments</p>
             </div>
-            <div class="d-none d-md-block col-md-6 masthead-image">
-                <!-- The featured image URL goes in the src attribute -->
+        </div>
+        <div class="row g-0 masthead-image">
+            <div class="col card">
                 {% if "placeholder" in post.featured_image.url %}
-                <img src="https://res.cloudinary.com/dcydt01ed/image/upload/v1691541592/b25lY21zOjJjMjhiYjFlLWUxNzUtNDU0My04Y2I1LWVjNWJjMzllZDFkOTplMzQ3ZmNjNS1iNWFiLTQ2OGUtOWE3Zi1jYzM0NDc3OGRlZDg_m61lwh.jpg" width="100%">
+                <img class="img-responsive" src="https://res.cloudinary.com/dcydt01ed/image/upload/v1691541592/b25lY21zOjJjMjhiYjFlLWUxNzUtNDU0My04Y2I1LWVjNWJjMzllZDFkOTplMzQ3ZmNjNS1iNWFiLTQ2OGUtOWE3Zi1jYzM0NDc3OGRlZDg_m61lwh.jpg" width="100%">
                 {% else %}
                 <img src=" {{ post.featured_image.url }}" width="100%">
                 {% endif %}
-            </div>
+        </div>
+    </div>
         </div>
     </div>
 </div>
 
 <div class="container">
     <div class="row">
-        <div class="col card mb-4  mt-3 left  top">
+        <div class="col card mb-4 mt-3 left top">
             <div class="card-body">
                 <p class="card-text ">
                     {{ post.content | safe }}
