--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -100,7 +100,7 @@
                 <form method="post" style="margin-top: 1.3em;">
                     {{ comment_form | crispy }}
                     {% csrf_token %}
-                    <button type="submit" class="btn btn-dark btn-lg">Submit</button>
+                    <button type="submit" class="btn btn-dark btn-lg">Add Comment</button>
                 </form>
                 {% endif %}
                 {% endif %}
