--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
 
 <body class="d-flex flex-column h-100 main-bg">
 
-    <!-- Navigation -->
+    <!-- NAVIGATION -->
 
     <nav class="navbar navbar-expand-lg light-bg navbar-light">
       <div class="container-fluid">
@@ -63,6 +63,18 @@
           </ul>
         </div>
       </nav>
+      <div class="container">
+        <div class="row">
+            <div class="col-md-8 offset-md-2">
+                {% for message in messages %}
+                <div class="alert {{ message.tags }} alert-dismissible fade show" id="msg" role="alert">
+                    {{ message | safe }}
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+                {% endfor %}
+            </div>
+        </div>
+    </div>
 
     <main class="flex-shrink-0 main-bg">
         {% block content %}
@@ -83,6 +95,13 @@
                     aria-label="Visit our youtube page (opens in a new tab)"><i class="fab fa-youtube-square ms-3"></i></a>
         </p>
     </footer>
+    <script>
+      setTimeout(function () {
+          let messages = document.getElementById('msg');
+          let alert = new bootstrap.Alert(messages);
+          alert.close();
+      }, 2000);
+  </script>
 </body>
 
 </html>
