--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -80,7 +80,8 @@
         <div class="col-md-4 card mb-4  mt-3 ">
             <div class="card-body">
                 {% if commented %}
-                <div class="alert alert-success" role="alert">
+                <div class="alert {{ message.tags }} alert-success alert-dismissible fade show" id="msg" role="alert">
+                    {{ message | safe }}
                     Thanks {{ user.username }}. Your comment is awaiting approval!
                 </div>
                 {% else %}
