--- a/static/css/style.css
+++ b/static/css/style.css
@@ -153,3 +153,9 @@ img.footer-logo {
     background: transparent;
     border: none;
 }
+
+
+.form-style {
+    margin-top: 40px;
+    max-width: 800px;
+}
