--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -8,6 +8,7 @@
 
 <div class="container form-style">
     <div class="container text-right">
+        <div class="p-5 mb-5 card-welcome border border-dark border-2 rounded-3 justify-content-center">
         <h1>Contact us</h1>
         <form method="post">
             <div class="form-group">
@@ -25,6 +26,7 @@
             </a>
         </div>
     </div>
+</div>
 </div>
 
 {% endblock %}
