--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
 
     <!-- NAVIGATION -->
 
-    <nav class="navbar navbar-expand-lg light-bg navbar-light">
+    <nav class="navbar navbar-expand-lg light-bg navbar-light sticky-top">
       <div class="container-fluid">
           <a class="navbar-brand" href="{% url 'home' %}"><img class="logo" src="https://res.cloudinary.com/dcydt01ed/image/upload/c_scale,h_300,w_900/v1691608017/Logo_m7ynhg.png"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
