--- a/static/css/style.css
+++ b/static/css/style.css
@@ -155,7 +155,20 @@ img.footer-logo {
 }
 
 
+/*-- FORMS --*/
+.card-title {
+    margin-bottom: 30px;
+}
+
 .form-style {
     margin-top: 40px;
     max-width: 800px;
+}
+
+
+.post-card {
+    margin-top: 4rem;
+    background-color: #e7d3b5;
+    box-shadow: 5px 5px 8px 4px;
+    text-align: center;
 }
