--- a/templates/create_post.html
+++ b/templates/create_post.html
@@ -1,13 +1,17 @@
 {% extends 'base.html' %}
+{% load crispy_forms_tags %}
 {% load static % }
 {% block content %}
 
 <div class="container form-style">
     <div class="p-5 mb-5 post-card border border-dark border-2 rounded-3">
         <h1 class="card-title">Create Post</h1>
-        <form enctype="multipart/form-data" method="POST"> {% csrf_token %}
-                {{ form.as_p }}
+        <form enctype="multipart/form-data" method="POST"> 
+            <div class="form-group">
+            {% csrf_token %}
+            {{ form | crispy }}
                 <button class="btn">Create Post</button>
+            </div>
         </form>
     </div>
 </div>
