Fix html pages indentation and add some comments

--- a/templates/base.html
+++ b/templates/base.html
@@ -81,7 +81,7 @@
         {% endblock content %}
     </main>
 
-    <!-- Footer -->
+    <!-- FOOTER -->
     <!-- Font awesome icons as the clickable links to social media sites. Links open in a new tab -->
     <footer class="footer mt-auto py-3 dark-bg">
         <p class="m-0 text-center text-white "><i class="far fa-copyright"> Copyright | </i><img class="footer-logo" src="https://res.cloudinary.com/dcydt01ed/image/upload/v1691714704/baltas_buscjw.png"></p>
@@ -94,6 +94,8 @@
                     aria-label="Visit our youtube page (opens in a new tab)"><i class="fab fa-youtube-square ms-3"></i></a>
         </p>
     </footer>
+
+    <!-- TIMEOUT FOR ALERT MSG -->
     <script>
       setTimeout(function () {
           let messages = document.getElementById('msg');
