--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -6,6 +6,8 @@
 
 {% block content %}
 
+<!-- LOGIN FORM -->
+
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-11 col-md-6 col-lg-5 col-xl-4 p-5 mb-5 card-welcome border border-dark border-2 rounded-3 justify-content-center">
@@ -27,4 +29,7 @@
   </div>   
 </div>
 </div>
+
+<!-- LOGIN FORM -->
+
 {% endblock %}
