--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -4,24 +4,27 @@
 
 {% block head_title %}{% trans "Log Out" %}{% endblock %}
 
+<!-- LOG OUT FORM -->
+
 {% block content %}
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-11 col-md-6 col-lg-5 col-xl-4 p-5 mb-5 card-welcome border border-dark border-2 rounded-3 justify-content-center">
       <h3 class="text-center">{% trans "Log Out" %}</h3>
 
-<p>{% trans 'Are you sure you want to log out?' %}</p>
+          <p>{% trans 'Are you sure you want to log out?' %}</p>
 
-<form method="post" action="{% url 'account_logout' %}">
-  {% csrf_token %}
-  {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
-  {% endif %}
-  <button class="btn btn-dark justify-content-center" type="submit">{% trans "Log Out" %}</button>
-</form>
-</div>
-</div>
+          <form method="post" action="{% url 'account_logout' %}">
+          {% csrf_token %}
+          {% if redirect_field_value %}
+          <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
+          {% endif %}
+          <button class="btn btn-dark justify-content-center" type="submit">{% trans "Log Out" %}</button>
+          </form>
+    </div>
+  </div>
 </div>
 
+<!-- LOG OUT FORM -->
 
 {% endblock %}
