--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -6,6 +6,7 @@
 
 {% block content %}
 
+<!-- REGISTRATION FORM -->
 
 <main class="container">
   <section class="row justify-content-center">
@@ -35,6 +36,8 @@
       </div>
     </div>
   </section>
-
 </main>
+
+<!-- REGISTRATION FORM -->
+
 {% endblock %}
