--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -2,6 +2,7 @@
 
 {% load crispy_forms_tags %}
 
+<!-- POST DETAILS SECTION -->
     <div class="container masthead">
         <div class="row g-0 masthead-text">
             <div class="card">
@@ -20,6 +21,7 @@
         </div>
     </div>
 
+<!-- POST LIKE AND COMMENT SECTION -->
 <div class="container">
     <div class="row">
         <div class="col card mb-4 mt-3 left top">
