--- a/templates/edit_post.html
+++ b/templates/edit_post.html
@@ -1,16 +1,34 @@
 {% extends 'base.html' %}
+
+{% load crispy_forms_tags %}
+
 {% load static % }
+
 {% block content %}
+
+
+<!-- EDIT POST FORM -->
 <div class="container form-style">
-    <div class="form-group p-5 mb-5 post-card border border-dark border-2 rounded-3">
-        <h2>Edit Post</h2>
-        <hr>
-        <form enctype="multipart/form-data" method="POST"> {% csrf_token %}
-            <div class="container mt-4">
-                {{ form.as_p }}
-                <button class="btn edit-post">Edit post</button>
+    <div class="p-5 mb-5 post-card border border-dark border-2 rounded-3">
+        <h1 class="card-title">Edit Post</h1>
+        <form enctype="multipart/form-data" method="POST"> 
+            <div class="form-group">
+            {% csrf_token %}
+            {{ form | crispy }}
+                <button class="btn">Edit Post</button>
             </div>
         </form>
     </div>
 </div>
-{% endblock  %}
+
+<!-- MESSAGES -->
+{% if messages %}
+<div class="alert alert-success">
+    {% for m in messages %}
+    <li{% if message.tags %} class="{{ message.tags }}" {% endif %}>{{ m }}</li>
+        {% endfor %}
+</div>
+
+{% endif %}
+
+{% endblock %}
