--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -8,6 +8,12 @@
             <div class="card">
                 <h1 class="post-title">{{ post.title }}</h1>
                 <p class="post-subtitle">{{ post.author }} | {{ post.created_on }} | {{ post.number_of_comments }} comments</p>
+                <hr>
+                {% if user.is_authenticated %}
+                {% if user.id == post.author.id %}
+                <a href="{% url 'update-post' post.pk %}" class="btn detailed-post">Edit Post</a>
+                {% endif %}
+                {% endif %}
             </div>
         </div>
     <div class="row g-0">
