--- a/templates/delete_post.html
+++ b/templates/delete_post.html
@@ -9,24 +9,16 @@
 <div class="container">
     <div class="row justify-content-center">
       <div class="col-11 col-md-6 col-lg-5 col-xl-4 p-5 mb-5 card-welcome border border-dark border-2 rounded-3 justify-content-center">
-        <h3 class="text-center">Delete: {{ post.title }}?</h3>
+        <form method="POST">
+        <h3 class="text-center">Would you like to delete "{{ post.title }}"?</h3>
             <br>
             {% csrf_token %}
-            <strong>All data of this post will be permanently deleted!</strong>
+            <strong class="delete-message">All data of this post will be permanently deleted!</strong>
             <br/>
             <button class="btn">Delete Post</button>
+        </form>
         </div>
     </div>
 </div>
-
-<!-- MESSAGES -->
-{% if messages %}
-<div class="alert alert-success">
-    {% for m in messages %}
-    <li{% if message.tags %} class="{{ message.tags }}" {% endif %}>{{ m }}</li>
-        {% endfor %}
-</div>
-
-{% endif %}
 
 {% endblock %}
