--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -8,7 +8,8 @@
             <div class="card">
                 {% if user.is_authenticated %}
                 {% if user.id == post.author.id %}
-                <a href="{% url 'update-post' post.pk %}" class="btn btn-lg post-edit">Edit Post</a>
+                <a href="{% url 'update_post' post.pk %}" class="btn btn-lg post-edit">Edit Post</a>
+                <a href="{% url 'delete_post' post.pk %}" class="btn btn-lg post-edit">Delete Post</a>
                 {% endif %}
                 {% endif %}
                 <h1 class="post-title">{{ post.title }}</h1>
