--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -8,8 +8,8 @@
             <div class="card">
                 {% if user.is_authenticated %}
                 {% if user.id == post.author.id %}
-                <a href="{% url 'update_post' post.pk %}" class="btn btn-lg post-edit">Edit Post</a>
-                <a href="{% url 'delete_post' post.pk %}" class="btn btn-lg post-edit">Delete Post</a>
+                <a href="{% url 'update_post' post.pk %}" class="btn post-edit">Edit Post</a>
+                <a href="{% url 'delete_post' post.pk %}" class="btn post-edit">Delete Post</a>
                 {% endif %}
                 {% endif %}
                 <h1 class="post-title">{{ post.title }}</h1>
@@ -19,7 +19,7 @@
     <div class="row g-0">
         <div class="card">
             {% if "placeholder" in post.featured_image.url %}
-            <img class="img-responsive" src="https://res.cloudinary.com/dcydt01ed/image/upload/v1691541592/b25lY21zOjJjMjhiYjFlLWUxNzUtNDU0My04Y2I1LWVjNWJjMzllZDFkOTplMzQ3ZmNjNS1iNWFiLTQ2OGUtOWE3Zi1jYzM0NDc3OGRlZDg_m61lwh.jpg" width="100%">
+            <img class="img-responsive" src="https://res.cloudinary.com/dcydt01ed/image/upload/v1692737340/q0o43rqaawoccbgafryc.jpg" width="100%">
             {% else %}
             <img src=" {{ post.featured_image.url }}" width="100%">
             {% endif %}
