Add the 404 view handler

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -185,6 +185,7 @@ img.footer-logo {
     box-shadow: 2px 3px 10px 2px #141414;
     color: #141414;
     margin-top: 4rem;
+    margin-bottom: auto;
 }
 
 
