Add the link to return home in 404 page

--- a/templates/base.html
+++ b/templates/base.html
@@ -78,6 +78,7 @@
 
     <main class="flex-shrink-0 main-bg">
         {% block content %}
+        <!-- Content from other pages extending this template -->
         {% endblock content %}
     </main>
 
