--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
 
   <div class="text-center">
     <blockquote class="blockquote">
-      <p>"The world would be a nicer place if everyone had the ability to love as unconditionally as a dog."</p>
+      <p class="blockquote-text">"The world would be a nicer place if everyone had the ability to love as unconditionally as a dog."</p>
     </blockquote>
       <figcaption class="blockquote-footer">
         <cite title="Source Title">- M.K.Clinton</cite>
