--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -90,7 +90,7 @@
                 {% if commented %}
                 <div class="alert {{ message.tags }} alert-success alert-dismissible fade show" id="msg" role="alert">
                     {{ message | safe }}
-                    Thanks {{ user.username }}. Your comment is awaiting approval!
+                    Thanks for your comment, {{ user.username }}!
                 </div>
                 {% else %}
                 
