--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -87,29 +87,22 @@
         </div>
         <div class="col-md-4 card mb-4  mt-3 ">
             <div class="card-body">
-                {% if commented %}
-                <div class="alert {{ message.tags }} alert-success alert-dismissible fade show" id="msg" role="alert">
-                    {{ message | safe }}
-                    Thanks for your comment, {{ user.username }}!
-                </div>
-                {% else %}
-                
                 {% if user.is_authenticated %}
-
                 <h3>Leave a comment:</h3>
-                <p>Posting as: {{ user.username }} 
+                <p>Posting as: {{ user.username }}
+                    <div class="profile-pic-comment rounded">
                     {% if user.profile.image %}
                     <img src="{{ user.profile.image.url }}" alt="User Image" width="100%">
                     {% else %}
                     <img src="https://res.cloudinary.com/dcydt01ed/image/upload/v1692970959/default_zitnfg.png" alt="User Image" width="100%">
                     {% endif %}
+                    </div> 
                 </p>
                 <form method="post" style="margin-top: 1.3em;">
                     {{ comment_form | crispy }}
                     {% csrf_token %}
                     <button type="submit" class="btn">Add Comment</button>
                 </form>
-                {% endif %}
                 {% endif %}
             </div>
         </div>
